Fixes scrolling on iOS?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -46,7 +46,6 @@ body {
   padding: 0;
   margin: 0;
   background: $background-color;
-  overflow-x: hidden !important;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
